--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <tr>
           <th class="number">Rank</th>
           <th class="name">School</th>
-          <th class="prize"># of Submitters</th>
+          <!--<th class="prize"># of Submitters</th>-->
         </tr>
       </thead>
     </table>
@@ -40,7 +40,7 @@
         <tr>
           <td class="number">{{rank}}</td>
           <td class="name">{{school}}</td>
-          <td class="prize">{{submitters}}</td>
+          <!--<td class="prize">{{submitters}}</td>-->
         </tr>
       {{/rows}}
     </tobdy>
